kubernetes/applications/node-red/base/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: node-red
  namespace: node-red
  annotations:
    # ExternalDNS configuration for Cloudflare
    external-dns.alpha.kubernetes.io/target: PLACEHOLDER
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    # Homepage Service Discovery
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Smart Home Integration"
    gethomepage.dev/name: "Node-Red"
    gethomepage.dev/icon: "node-red.png"
    gethomepage.dev/weight: "1"
    gethomepage.dev/href: "https://PLACEHOLDER"

spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`PLACEHOLDER`)
      priority: 10
      middlewares:
        - name: chain-mfa-auth
          namespace: ingress-controller
      services:
        - kind: Service
          name: node-red
          port: 1880
  tls:
    secretName: node-red-tls-cert
